Fixing for java17.